--- a/src/pages/MainPage/MainPage.module.sass
+++ b/src/pages/MainPage/MainPage.module.sass
@@ -48,6 +48,7 @@
         .products
             display: flex
             flex-direction: row
+            justify-content: center
             gap: 30px
             flex-wrap: wrap
             margin-right: 80px
